# Inkingi

./: .gitignore  README.md  docker-compose.yml  start.sh
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: README  env.py  script.py.mako
backend/app/: celery_app.py  main.py
backend/app/api/: deps.py
backend/app/api/routers/: auth.py  calendar.py  classes.py  courses.py  enrollments.py  finance.py  inventory.py  marks.py  messages.py  people.py  schools.py  timetable.py  users.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: academic.py  ai.py  auth.py  classes.py  communication.py  courses.py  fees.py  inventory.py  marks.py  schools.py  staff.py  students.py  timetable.py  users.py
backend/app/core/: celery.py  config.py  database.py  rbac.py  redis_client.py  security.py
backend/app/db/: rls.py  session.py
backend/app/models/: __init__.py  academic.py  academics.py  ai.py  base.py  calendar.py  communication.py  course.py  fees.py  finance.py  inventory.py  marks.py  message.py  school.py  staff.py  student.py  timetable.py  user.py
backend/app/schemas/: __init__.py  academic.py  ai.py  calendar.py  classes.py  communication.py  course.py  enrollments.py  fees.py  inventory.py  marks.py  people.py  school.py  staff.py  student.py  timetable.py  user.py
backend/app/tasks/: ai.py  email.py  example.py  reports.py  sms.py
deploy/: docker-compose.yml  env.example
frontend/: Dockerfile  index.html  package.json  tailwind.config.ts
inkingi-smart-school/: .gitignore  README.md  (+2 more)
(+131 files in other folders)
